--- a/templates/pod.yaml
+++ b/templates/pod.yaml
@@ -8,3 +8,6 @@ spec:
   containers:
   - name: {{ .Values.component }}
     image: 633788536644.dkr.ecr.us-east-1.amazonaws.com/{{ .Values.component }}:{{ .Values.APP_VERSION }}
+   initContainers:
+  - name: roboshop-aws-ps-init-cont
+    image: 633788536644.dkr.ecr.us-east-1.amazonaws.com/roboshop-aws-ps-init-cont:2.0.0
