--- a/templates/pod.yaml
+++ b/templates/pod.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     app.kubernetes.io/name: {{ .Values.component }}
 spec:
+  serviceAccountName: {{ .Values.component }}
   containers:
   - name: {{ .Values.component }}
     image: 633788536644.dkr.ecr.us-east-1.amazonaws.com/{{ .Values.component }}:{{ .Values.APP_VERSION }}
