--- a/templates/pod.yaml
+++ b/templates/pod.yaml
@@ -12,3 +12,5 @@ spec:
   initContainers:
   - name: roboshop-aws-ps-init-cont
     image: 633788536644.dkr.ecr.us-east-1.amazonaws.com/roboshop-aws-ps-init-cont:2.0.2
+    imagePullPolicy: Always
+
