--- a/templates/pod.yaml
+++ b/templates/pod.yaml
@@ -13,4 +13,10 @@ spec:
   - name: roboshop-aws-ps-init-cont
     image: 633788536644.dkr.ecr.us-east-1.amazonaws.com/roboshop-aws-ps-init-cont:2.0.2
     imagePullPolicy: Always
-
+    volumeMounts:
+    - mountPath: /common
+      name: common
+  volumes:
+  - name: common
+    emptyDir:
+      sizeLimit: 5Mi
