--- a/templates/pod.yaml
+++ b/templates/pod.yaml
@@ -9,9 +9,15 @@ spec:
   containers:
   - name: {{ .Values.component }}
     image: 633788536644.dkr.ecr.us-east-1.amazonaws.com/{{ .Values.component }}:{{ .Values.APP_VERSION }}
+    volumeMounts:
+    - mountPath: /common
+      name: common
   initContainers:
   - name: roboshop-aws-ps-init-cont
-    image: 633788536644.dkr.ecr.us-east-1.amazonaws.com/roboshop-aws-ps-init-cont:2.0.2
+    image: 633788536644.dkr.ecr.us-east-1.amazonaws.com/roboshop-aws-ps-init-cont:2.0.3
+    env:
+      - name: PARAMETERS
+        value: {{ .Values.PARAMETERS }}
     imagePullPolicy: Always
     volumeMounts:
     - mountPath: /common
