--- a/templates/serviceaccount.yaml
+++ b/templates/serviceaccount.yaml
@@ -3,6 +3,6 @@ kind: ServiceAccount
 metadata:
   name: {{ .Values.component }}
   annotations:
-    eks.amazonaws.com/role-arn: arn:aws:iam::633788536644:role/eks-ssm-pm-read-only
+    eks.amazonaws.com/role-arn: arn:aws:iam::633788536644:role/prod-eks-ssm-ro
   labels:
     app.kubernetes.io/name: {{ .Values.component }}
