--- a/templates/job.yaml
+++ b/templates/job.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   template:
     spec:
+      serviceAccountName: {{ .Values.component }}
       containers:
       - name: schema
         image: 633788536644.dkr.ecr.us-east-1.amazonaws.com/roboshop-schema-init-cont:2.0.0
