--- a/templates/serviceaccount.yaml
+++ b/templates/serviceaccount.yaml
@@ -4,5 +4,8 @@ metadata:
   name: {{ .Values.component }}
   annotations:
     eks.amazonaws.com/role-arn: arn:aws:iam::633788536644:role/prod-eks-ssm-ro
+    helm.sh/hook: pre-install
+    helm.sh/hook-delete-policy: before-hook-creation
+    helm.sh/hook-weight: "-10"
   labels:
     app.kubernetes.io/name: {{ .Values.component }}
