--- a/values.yaml
+++ b/values.yaml
@@ -18,7 +18,9 @@ serviceAccount:
   # Specifies whether a service account should be created
   create: true
   # Annotations to add to the service account
-  annotations: {}
+  annotations:
+    eks.amazonaws.com/role-arn: arn:aws:iam::633788536644:role/prod-eks-ssm-ro
+    helm.sh/hook: pre-install
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
   name: ""
