--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -27,12 +27,29 @@ spec:
       serviceAccountName: {{ include "roboshop.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      volumes:
+      - name: common
+        emptyDir:
+          sizeLimit: 5Mi
+      initContainers:
+        - name: roboshop-aws-ps-init-cont
+          image: 633788536644.dkr.ecr.us-east-1.amazonaws.com/roboshop-aws-ps-init-cont:2.0.3
+          env:
+            - name: PARAMETERS
+              value: {{ .Values.PARAMETERS }}
+          imagePullPolicy: Always
+          volumeMounts:
+          - mountPath: /common
+            name: common
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: 633788536644.dkr.ecr.us-east-1.amazonaws.com/{{ .Values.component }}:{{ .Values.APP_VERSION }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          volumeMounts:
+          - mountPath: /common
+            name: common
           ports:
             - name: http
               containerPort: 80
