--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -23,34 +23,16 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  {{- if and .Values.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
-  ingressClassName: {{ .Values.ingress.className }}
-  {{- end }}
-  {{- if .Values.ingress.tls }}
-  tls:
-    {{- range .Values.ingress.tls }}
-    - hosts:
-        {{- range .hosts }}
-        - {{ . | quote }}
-        {{- end }}
-      secretName: {{ .secretName }}
-    {{- end }}
-  {{- end }}
+  ingressClassName: nginx
   rules:
-    {{- range .Values.ingress.hosts }}
-    - host: {{ .host | quote }}
-      http:
-        paths:
-          {{- range .paths }}
-          - path: {{ .path }}
-            {{- if and .pathType (semverCompare ">=1.18-0" $.Capabilities.KubeVersion.GitVersion) }}
-            pathType: {{ .pathType }}
-            {{- end }}
-            backend:
-              service:
-                name: {{ .Values.component }}
-                port:
-                  number: {{ .Values.port }}
-          {{- end }}
-    {{- end }}
+  - host: {{.Values.component}}.rdevopsb72.online
+    http:
+      paths:
+      - backend:
+          service:
+            name: {{.Values.component}}
+            port:
+              number: {{.Values.port}}
+        path: /
+        pathType: Prefix
 {{- end }}
