--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -12,7 +12,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: {{.Values.component}}.rdevopsb72.online
+  - host: {{.Values.recordName}}
     http:
       paths:
       - backend:
