--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -21,5 +21,5 @@ spec:
             port:
               number: {{.Values.port}}
         path: /
-        pathType: Prefix
+        pathType: ImplementationSpecific
 {{- end }}
