--- a/templates/pod.yaml
+++ b/templates/pod.yaml
@@ -11,5 +11,5 @@ metadata:
     spec:
       containers:
       - name: {{ .Values.component }}
-        image: 219961291665.dkr.ecr.us-east-1.amazonaws.com/{{ .Values.component }}
+        image: 219961291665.dkr.ecr.us-east-1.amazonaws.com/{{ .Values.component }}:{{ .Values.APP_VERSION }}
 
